--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,7 +5,9 @@
         android:id="@+id/menu_settings"
         app:showAsAction="never"
         android:title="@string/settings_string"
-        android:orderInCategory="5"/>
+        android:orderInCategory="5"
+
+        />
 
     <group android:checkableBehavior="single">
 
