Added a menu that "works" (shows up, but is a transparent overlay on the main activity) Made things fragmented.

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,7 +6,7 @@
         app:showAsAction="never"
         android:title="@string/settings_string"
         android:orderInCategory="5"
-
+        android:icon="@drawable/ic_stat_new_lpk"
         />
 
     <group android:checkableBehavior="single">
