--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,33 +4,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:background="#F2712B"
     android:id="@+id/main_view">
 
-    <TextView
+    <fragment
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/center_string"
-        android:id="@+id/textView"
+        android:name="ca.lukeandlaura.lpk01.HomeFrag"
+        android:id="@+id/fragment_container"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/main_button1_string"
-        android:id="@+id/startNotiButton"
-        android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="89dp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/main_button2_string"
-        android:id="@+id/stopNotiButton"
-        android:layout_below="@+id/startNotiButton"
-        android:layout_centerHorizontal="true" />
-
+        tools:layout="@layout/fragment_home" />
 </RelativeLayout>
