--- a/app/src/main/res/xml/preference_dependencies.xml
+++ b/app/src/main/res/xml/preference_dependencies.xml
@@ -25,8 +25,8 @@
             android:key="list_preference"
             android:title="@string/title_list_preference"
             android:summary="@string/summary_list_preference"
-            android:entries="@array/testArray"
-            android:entryValues="@array/testArrayValues"
+            android:entries="@array/entries_list_preference"
+            android:entryValues="@array/entryvalues_list_preference"
             android:dialogTitle="@string/dialog_title_list_preference" />
 
     </PreferenceCategory>
@@ -34,23 +34,19 @@
     <PreferenceCategory
         android:title="@string/launch_preferences">
 
-        <!-- This PreferenceScreen tag serves as a screen break (similar to page break
-             in word processing). Like for other preference types, we assign a key
-             here so it is able to save and restore its instance state. -->
+        <!-- This PreferenceScreen tag sends the user to a new fragment of
+             preferences.  If running in a large screen, they can be embedded
+             inside of the overall preferences UI. -->
         <PreferenceScreen
-            android:key="screen_preference"
-            android:title="@string/title_screen_preference"
-            android:summary="@string/summary_screen_preference">
-
-            <!-- You can place more preferences here that will be shown on the next screen. -->
-
-            <CheckBoxPreference
-                android:key="next_screen_checkbox_preference"
-                android:title="@string/title_next_screen_toggle_preference"
-                android:summary="@string/summary_next_screen_toggle_preference" />
-
+            android:fragment="ca.lukeandlaura.lpk01.SettingsClass$Prefs1FragmentInner"
+            android:title="@string/title_fragment_preference"
+            android:summary="@string/summary_fragment_preference">
+            <!-- Arbitrary key/value pairs can be included for fragment arguments -->
+            <extra android:name="someKey" android:value="somePrefValue" />
         </PreferenceScreen>
 
+        <!-- This PreferenceScreen tag sends the user to a completely different
+             activity, switching out of the current preferences UI. -->
         <PreferenceScreen
             android:title="@string/title_intent_preference"
             android:summary="@string/summary_intent_preference">
