--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,7 +5,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SettingsActivity"
     android:background="#F2712B"
-    android:id="@+id/settings_view">
+    android:id="@+id/settings_view"
+    >
 
     <TextView
         android:layout_width="wrap_content"
