--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="ca.lukeandlaura.lpk01.HomeFrag">
+    android:layout_height="match_parent" tools:context="ca.lukeandlaura.lpk01.HomeFrag"
+    android:id="@+id/fragmentHome">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -22,5 +23,6 @@
         android:background="@drawable/ic_launcher"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:layout_margin="40dp" />
+        android:layout_margin="40dp"
+        />
 </RelativeLayout>
